cmake_minimum_required(VERSION 3.16)

PROJECT(simple_test)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(CMAKE_CURRENT_SOURCE_DIR)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.cc)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/libdb.a )
